# explot

./: README.md  pyproject.toml
explot/: __init__.py  directed_line_segment.py  piecewise_function.py  types.py
explot/curve/: curve.py  curve_arrow.py
matplotlib-styles/: diagram.mplstyle  math.mplstyle
